Footer: fix margin for dark mode too

--- a/src/index.scss
+++ b/src/index.scss
@@ -156,6 +156,6 @@ a.list-link:hover {
     border-top-color: #595959;
 }
 
-#footer {
+.footer-section {
     margin-top: 48px;
 }
